[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/turrets/laser.png" type="Texture" id=1]
[ext_resource path="res://src/actors/turrets/OnOff.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/turrets/laser_turret.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 28.9207

[node name="laser_turret" type="Node2D" groups=[
"laser_turrets",
"turrets",
]]
script = ExtResource( 4 )

[node name="laser" type="Sprite" parent="."]
position = Vector2( 0.24654, -3.72385 )
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="canon1" type="Position2D" parent="RayCast2D"]
position = Vector2( 0.00695038, -5.82055 )
rotation = -1.58298

[node name="canon2" type="Position2D" parent="RayCast2D"]
position = Vector2( 4.81876, -4.72921 )
rotation = 5.49354

[node name="canon3" type="Position2D" parent="RayCast2D"]
position = Vector2( 5.9101, -0.0662184 )

[node name="canon4" type="Position2D" parent="RayCast2D"]
position = Vector2( 3.92585, 3.00937 )
rotation = 0.676834

[node name="canon5" type="Position2D" parent="RayCast2D"]
position = Vector2( 0.0565567, 1.02512 )
rotation = 1.58567

[node name="canon6" type="Position2D" parent="RayCast2D"]
position = Vector2( -4.20958, 2.86055 )
rotation = 2.48828

[node name="canon7" type="Position2D" parent="RayCast2D"]
position = Vector2( -5.84659, -0.0166121 )
rotation = -3.1371

[node name="canon8" type="Position2D" parent="RayCast2D"]
position = Vector2( -5.84659, -4.72921 )
rotation = -2.46665

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="turret_cooldown" type="Timer" parent="."]

[node name="OnOff" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="turret_cooldown" to="." method="_on_turret_cooldown_timeout"]
